<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@drawable/quiz_app_background"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/quizAppTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name_quiz_app"
        android:textSize="48sp"
        android:textColor="@color/white"
        android:shadowColor="@color/color5"
        android:shadowDx="10"
        android:shadowDy="5"
        android:shadowRadius="15"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16sp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:backgroundTint="@color/color3"
        app:cardCornerRadius="32sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="24sp"
                android:textColor="@color/color5"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_name"
                android:layout_marginVertical="16sp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:gravity="center"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColorHint="@color/white"
                    android:inputType="textCapWords"
                    android:textColor="@color/white">
                </androidx.appcompat.widget.AppCompatEditText>


            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/startButton"
                android:layout_marginHorizontal="64dp"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:backgroundTint="@color/color5">
            </com.google.android.material.button.MaterialButton>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
